<resources>
    <string name="app_name">Podrži život</string>
    <string name="home_activity_title">Podrži život</string>
    
    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_donate_sms">Doniraj SMS</string>
    <string name="nav_become_volunteer">Postani volonter</string>
    <string name="nav_become_donator">Postani donator</string>
    <string name="nav_need_help">Treba ti pomoć?</string>
    <string name="nav_about_us">O fondaciji</string>
    <string name="nav_friends">Prijatelji fondacije</string>
    <string name="nav_contacts">Kontakt</string>
    <string name="scheduled_status_title">Sledece slanje je \n%1$s</string>
    <string name="scheduled_status_description">Jednom mesešno, odabranog dana, aplikacija će za vas poslati jedan SMS i donirati 100 dinara.</string>
    <string name="scheduled_btn">Ugasi mesečno slanje</string>
    <string name="not_scheduled_status_title">Šaljite SMS jednom mesečno</string>
    <string name="not_scheduled_status_description">Zakažite slanje SMS-a i svakog meseca aplikacija ce poslati JEDAN SMS za vas. 100 dinara mesečno nekome možda znači ceo život!!!</string>
    <string name="not_scheduled_btn">Podesi slanje svakog meseca</string>
    
    <!--Snacks/Toasts-->
    <string name="snack_unscheduled">Uklonili ste zakazano slanje poruke!</string>
    <string name="snack_scheduled">Zakazali ste automatsko slanje poruke sledeceg meseca</string>
    
    
    <!--Error messages-->
    <string name="error_cant_check_subscription">Nismo u mogucnosti da odredimo da li ste zakazali slanje</string>
    
    <!-- Alarm -->
    <string name="notification_title">Donirali ste jedan SMS</string>
    <string name="notification_content_text">Sledeci SMS ce biti poslat sledeceg meseca istog dana</string>
    
    <!-- Become volunteer-->
    <string name="become_volunteer_activity_title">Podrži zivot</string>
    <string name="become_volunteer_title">Postani volonter</string>
    <string name="become_volunteer_description"><![CDATA[
    Fondacija <b>„Podrži život“</b> vas poziva da postanete deo našeg tima!
    <br/>Popunite Anketu za volontere OVDE i pošaljite je na E-mail: <a href="mailto:volonteri@podrzizivot.com">volonteri@podrzizivot.com</a>
    <br/>Nakon poslate ankete, očekujte poziv na upoznavanje i razgovor sa zaposlenima u fondaciji, gde će vam detaljno biti objašnjeno koji su tačno poslovi volontera.
]]></string>
    <string name="become_volunteer_moto">Volonteri su uvek dobrodošli i potrebni</string>
    
    <!-- Become donator-->
    <string name="become_donator_activity_title">Podrži život</string>
    <string name="become_donator_title">Postani donator</string>
    <string name="become_donator_description"><![CDATA[
    Fondacija <b>„Podrži život“</b> donacije prima <u>isključivo</u> putem SMS poruka na broj <b>5757</b> i uplatama na tekući dinarski i devizni račun fondacije „Podrži život“.
    <br/><br/>
 - Dinarski tekući račun: <b><i>205-999-98</i></b>
<br/><br/>
Informacije o uplati na devizni račun:
<br/> - <a href = "http://www.podrzizivot.com/wp-content/uploads/2016/12/Uputstvo-za-uplatu-EUR.pdf">Uputstvo za uplatu iz inostranstva (EUR)</a></li>
<br/> - <a href = "http://www.podrzizivot.com/wp-content/uploads/2016/12/Uputstvo-za-uplatu-USD.pdf">Uputstvo za uplatu iz inostranstva (USD)</a></li>

<br/><br/>
Ukoliko želite da postanete naš donator na mesečnom ili godišnjem nivou i pomognete bolesnoj deci,
kontaktirajte nas putem E-mail adrese: <a href="mailto:kontakt@podrzizivot.com>kontakt@podrzizivot.com</a>
ili na broj telefona <a href="tel:0114089785">011/4089-785</a>.
<br/><br/>
<b><u>Ukoliko vas neko kontaktira radi donacija na bilo koji drugi način, sem navedenog, molimo vas da nam se obratite na broj telefona <a href="tel:0114089785">011/4089-785</a>.</b></u>

]]></string>
    
    
    <!-- Need help?-->
    <string name="need_help_activity_title">Podrži život</string>
    <string name="need_help_title">Treba ti pomoć?</string>
    <string name="need_help_description"><![CDATA[
        Da biste aplicirali za humanitarnu pomoć fondacije <b>„Podrži život“</b>,
neophodno je da dostavite sledeću dokumentaciju:
<br/>
<br/> - Popunjenu molbu koju možete preuzeti OVDE
<br/> - Kompletno skeniranu lekarsku dokumentaciju deteta
<br/> - Predračun iz klinike ili apoteke
<br/> - Potvrda državnih fondova za odbijanje pružanja sredstava

<br/><br/>
Ovu dokumentaciju pošaljite na E-mail: <a href="mailto:sekretar@podrzizivot.com">sekretar@podrzizivot.com</a>
<br/><br/>


Dostavljena dokumentacija će biti prosleđena lekarskoj komisiji za kontolu i odobravanje humanitarne pomoći, a nakon toga Upravnom odboru.
Ukoliko Upravni odbor usvoji predlog lekarske komisije za kontrolu i odobravanje humanitarne pomoći, pokreće se humanitarna akcija za dete i dodeljuje humanitarni SMS broj <b>5757</b>
<br/><br/>
Fondacija <b>„Podrži život“</b> po ispostavljenom predračunu, novac uplaćuje direktno ustanovama koje su izdale predračun, nikada porodicama direktno.
<br/><br/>
Dokumentaciju možete dostaviti i preporučenom pošiljkom na adresu <br/><b><i>Mitropolita Petra 15, 11000 Beograd, Fondacija “Podrži život”</i></b>
    ]]></string>
    
    
    <!--About us-->
    <string name="about_us_activity_title">O Fondaciji</string>
    
    <string name="about_us_founders_title">Osnivači</string>
    <string name="about_us_founders_sergej">Sergej Trifunović</string>
    <string name="about_us_founders_verica">Verica Šegan</string>
    
    <string name="about_us_board_title">Upravni odbor</string>
    <string name="about_us_board_sergej">Sergej Trifunović – predsednik UO (glumac)</string>
    <string name="about_us_board_basara">Svetislav Basara (književnik)</string>
    <string name="about_us_board_dragan">Dragan Jaćimović (alpinista)</string>
    <string name="about_us_board_paspalj">Žarko Paspalj (košarkaš)</string>
    <string name="about_us_board_bozovic">Prof. dr Radoslav Božović (sociolog)</string>
    
    <string name="about_us_mission_title">Misija</string>
    <string name="about_us_mission_text"><![CDATA[Osmeh, radost i bezbrižnost naše dece moguće je osigurati kroz podršku u kriznim situacijama oboleloj i siromašnoj deci, kao i njihovim porodicama.
        <br/>
Mi nismo nemi posmatrači i svesni smo ograničenja koja institucije imaju i zato stvaramo mogućnosti na angažovanju šire zajednice kako bi se osiguralo da humane osobe koje žele da podrže naše napore, imaju mogućnost da to i učine.
        <br/>
Ponosni smo na raznolikost kultura i verovanja svih građana Srbije i duboko verujemo da se svaka razlika može prevazići u istoj želji i htenjima. Zato verujemo da nas te razlike mogu povezati da istrajemo u naporima koje ulažemo.
        <br/>
Svaki pojedinac nam je važan i svaki zadatak nam je prioritet. Verujemo da samo radeći zajedno, možemo ostvariti prava naše dece na bolji život i lepšu budućnost.]]></string>
    <string name="about_us_vission_title">Vizija</string>
    <string name="about_us_vission_text"><![CDATA[Budućnost ne možemo da predvidimo, ali uradićemo sve da je imaju sva deca Srbije.
Verujemo u samo jednu budućnost. Budućnost u kojoj deca odrastaju dostojanstveno. Tu budućnost možemo da ostvarimo zajedno stvarajući krug podrške onima kojima je naša pomoć neophodna i potrebna.
        <br/>
Uključenost svih građana, osiguranje je jednakosti i zagarantovanih prava svakog deteta na budućnost bez obzira na materijalni status porodice i društva.
        Srećna i bezbrižna deca najsigurniji su temelj budućnosti svakog naroda u svetu. Uz istrajnost, podršku, saosećanje i razumevanje cele društvene zajednice, gradimo svakog pojedinca, gradimo i nas same.
        <br/>
Ocenjujući napredak i uz kontinuirani rad, ali i proveru prioriteta, odlučni smo u nameri da našoj deci ostvarimo bolju Srbiju za sve građane.]]></string>
    
    <string name="about_us_goals_title">Ciljevi</string>
    <string name="about_us_goals_text"><![CDATA[Zdrava, srećna i bezbrižna deca su naš jedini cilj.
        <br/>
Ostvarićemo ga kroz unapređenje socijalne i zdravstvene zaštite dece u Srbiji, sprovodeći različite humanitarne aktivnosti.
        <br/>
Podrška oboleloj deci i njihovim porodicama u cilju lečenja, medicinskog zbrinjavanja i oporavka, promovisanje i unapređenje sistema dečije zdravstvene zaštite u Srbiji, je osnovni cilj naše fondacije.
        <br/>
Budućnost i životne mogućnosti dece u Srbiji, koja nisu odredjena siromaštvom, teškim bolestima, načinom na koji žive, lokacijom, nacionalnošću i veroispovesti, naš je siguran put u zdravo i uspešno društvo.
        <br/>
Mi imamo cilj i na kraju prihvatamo samo jednu nagradu – osmeh i radost na licima onih kojima smo potrebni. Taj osmeh i ta radost nemaju cenu i njihovu vrednost znaju samo oni koji su pomažući drugima, postali ponosni vlasnici mnogo osmeha.]]></string>
    
    
    <!-- Foundation friends-->
    <string name="foundation_freinds_activity_title">Podrži život</string>
    <string name="foundation_freinds_title">Prijatelji fondacije</string>
    <string name="foundation_friends_error">Zao nam je, ne mozemo da prikazemo prijatelje. Pokusajte kasnije</string>
    <string name="home_page_schedule_btn">Da, zelim da pomognem</string>
    <string name="nav_section_about_us">O nama</string>
    <string name="nav_section_contakt">Kontakt</string>

</resources>
