<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view"
    >
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_donate_sms"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_donate_sms"
            />
        <item
            android:id="@+id/nav_become_volunteer"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_become_volunteer"
            />
        <item
            android:id="@+id/nav_become_donator"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_become_donator"
            />
        <item
            android:id="@+id/nav_need_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_need_help"
            />
    </group>
    
    <item android:title="O nama">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_about_us"
                />
            <item
                android:id="@+id/nav_friends"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_friends"
                />
        </menu>
    </item>
    <item android:title="Kontakt">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_contacts"
                />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_menu_camera"
                android:title="Facebook"
                />
            <item
                android:id="@+id/nav_instagram"
                android:icon="@drawable/ic_menu_camera"
                android:title="Instagram"
                />
            <item
                android:id="@+id/nav_twitter"
                android:icon="@drawable/ic_menu_camera"
                android:title="Twitter"
                />
        </menu>
    </item>

</menu>
