<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.eutechpro.smshelp.volunteer.BecomeVolunteerActivity"
    >
    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/founders_title"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10dp"
            android:text="@string/about_us_founders_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/about_us_founders_title"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/founders_sergej"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/about_us_founders_sergej"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/founders_title"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/founders_verica"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/about_us_founders_verica"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/founders_sergej"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/board_title"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/about_us_board_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/founders_verica"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/board_sergej"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/about_us_board_sergej"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board_title"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/board_basara"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/about_us_board_basara"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board_sergej"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/board_about_us_board_paspalj"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/about_us_board_paspalj"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board_about_us_board_dragan"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/board_about_us_board_dragan"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/about_us_board_paspalj"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board_basara"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/board_about_us_board_bozovic"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:text="@string/about_us_board_bozovic"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board_about_us_board_paspalj"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/mission_title"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/about_us_mission_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board_about_us_board_bozovic"
            tools:text="@string/about_us_mission_title"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/mission_text"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="10sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mission_title"
            tools:text="Mission text"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/textViewFont2"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/about_us_vission_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/mission_text"
            tools:text="@string/about_us_vission_title"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/vission_text"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="8sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFont2"
            tools:text="Vission text"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/textViewFont3"
            style="@style/h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/about_us_goals_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vission_text"
            tools:text="@string/about_us_goals_title"
            />
        
        <com.eutechpro.smshelp.customviews.TextViewFont
            android:id="@+id/goals_text"
            style="@style/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:lineSpacingExtra="8sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFont3"
            tools:text="Goals text"
            />
    </android.support.constraint.ConstraintLayout>
</ScrollView>